<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.github.streamshub</groupId>
        <artifactId>console</artifactId>
        <version>0.7.0-SNAPSHOT</version>
    </parent>

    <artifactId>systemtests</artifactId>
    <description>
        The intention of this module is to test StreamsHub Console UI with kafka instance deployed and managed by Strimzi Cluster Operator, to simulate a real user scenarios for end-to-end testing.
    </description>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- Simple logging facade for java for log4j -->
        <slf4j.version>2.0.12</slf4j.version>
        <!-- Playwright -->
        <playwright.version>1.47.0</playwright.version>
        <!--    Mocking environment    -->
        <mockito.version>5.15.2</mockito.version>
        <junit-pioneer.version>2.3.0</junit-pioneer.version>
        <springframework.version>6.2.5</springframework.version>
        <!-- Used for test-frame -->
        <test-frame.version>0.8.0</test-frame.version>
        <log4j.version>2.24.3</log4j.version>
        <skipTests>false</skipTests>
        <skipUTs>${skipTests}</skipUTs>
        <skipSTs>${skipTests}</skipSTs>
    </properties>

    <dependencies>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
        </dependency>
        <dependency>
            <groupId>com.github.streamshub</groupId>
            <artifactId>console-operator</artifactId>
            <version>${project.version}</version>
            <exclusions>
                <!-- Exclude JBoss SLF4J and LogManager from quarkus-->
                <exclusion>
                    <groupId>org.jboss.slf4j</groupId>
                    <artifactId>slf4j-jboss-logmanager</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.jboss.slf4j</groupId>
                    <artifactId>slf4j-jboss-logging</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.jboss.logmanager</groupId>
                    <artifactId>jboss-logmanager</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.microsoft.playwright</groupId>
            <artifactId>playwright</artifactId>
            <version>${playwright.version}</version>
        </dependency>
        <dependency>
            <groupId>io.strimzi</groupId>
            <artifactId>api</artifactId>
            <version>${strimzi-api.version}</version>
        </dependency>
        <dependency>
            <groupId>io.skodjob</groupId>
            <artifactId>test-frame-common</artifactId>
            <version>${test-frame.version}</version>
        </dependency>
        <dependency>
            <groupId>io.skodjob</groupId>
            <artifactId>test-frame-kubernetes</artifactId>
            <version>${test-frame.version}</version>
        </dependency>
        <dependency>
            <groupId>io.skodjob</groupId>
            <artifactId>test-frame-openshift</artifactId>
            <version>${test-frame.version}</version>
        </dependency>
        <dependency>
            <groupId>io.skodjob</groupId>
            <artifactId>test-frame-log-collector</artifactId>
            <version>${test-frame.version}</version>
        </dependency>
        <!--   Mocking environment     -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit-pioneer</groupId>
            <artifactId>junit-pioneer</artifactId>
            <version>${junit-pioneer.version}</version>
            <scope>test</scope>
        </dependency>
        <!--    Reflections    -->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
            <version>${springframework.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <version>${springframework.version}</version>
            <scope>test</scope>
        </dependency>
        <!--    Logger      -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j2-impl</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire-plugin.version}</version>
                <configuration>
                    <skipTests>${skipUTs}</skipTests>
                    <includes>
                        <include>**/*UT.java</include>
                        <include>**/*Test.java</include>
                    </includes>
                    <!-- Known issue, mocking in order to change ENV for UTs needs `add-opens` for utils package,
                    but then jacoco needs no argLine or @argLine to be passed to JVM in order to run properly -->
                    <argLine>
                        @{argLine}
                        --add-opens java.base/java.util=ALL-UNNAMED
                        --add-opens java.base/java.lang=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${surefire-plugin.version}</version>
                <executions>
                    <execution>
                        <id>system-tests</id>
                        <goals>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <skipTests>${skipSTs}</skipTests>
                    <includes>
                        <include>**/*ST.java</include>
                    </includes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <executions>
                    <!-- Attach JaCoCo agent to unit tests -->
                    <execution>
                        <id>default-prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                        <configuration>
                            <destFile>${project.build.directory}/jacoco-unit.exec</destFile>
                            <append>true</append>
                        </configuration>
                    </execution>
                    <!-- Generate aggregated coverage report -->
                    <execution>
                        <id>report-aggregate</id>
                        <goals>
                            <goal>report-aggregate</goal>
                        </goals>
                        <phase>verify</phase>
                        <configuration>
                            <excludes>
                                <exclude>**/*Builder.class</exclude>
                                <exclude>**/*Fluent.class</exclude>
                                <exclude>**/*Nested.class</exclude>
                                <!-- Exclude Constants and Enums -->
                                <exclude>com/github/streamshub/systemtests/constants/*</exclude>
                                <exclude>com/github/streamshub/systemtests/enums/*</exclude>
                                <!-- Exclude Environment. It's tested by TF -->
                                <exclude>com/github/streamshub/systemtests/Environment.class</exclude>
                                <!-- Exclude LogCollector. It's tested by TF -->
                                <exclude>com/github/streamshub/systemtests/logs/TestLogCollector.class</exclude>
                                <exclude>com/github/streamshub/systemtests/unit/*</exclude>
                            </excludes>
                            <includeCurrentProject>true</includeCurrentProject>
                            <outputDirectory>${project.reporting.outputDirectory}/jacoco</outputDirectory>
                            <formats>
                                <format>HTML</format>
                            </formats>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>
</project>